Fix 100% height on ios

--- a/assets/index.css
+++ b/assets/index.css
@@ -71,6 +71,7 @@
 
 html {
     box-sizing: border-box;
+    height: -webkit-fill-available;
 }
 
 * {
@@ -81,7 +82,8 @@ body {
     margin: 0;
     padding: 0 3rem;
 
-    height: 100vh;
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr auto;
